--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+      <meta charset="UTF-8" />
 <title>School cards By E. Alasi</title>
 
-
-
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.js"></script>
+<h1 id="greeting">Welcome students of Canyon Ridge!</h1>
   
 </head>
 
 <body>
 
-
-
+<p id="info">Welcome To the official <br> site of school cards. <br> Made by Esther A. </p>
+<script src="sketch.js?v=coolo"></script>
 
 
   
