--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
       <meta charset="UTF-8" />
 <title>School cards By E. Alasi</title>
- <link rel="stylesheet" href="style.css" />
+ <link rel="stylesheet" href="style.css?v=1.0" />
  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.js"></script>
 
   
