--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <h1 id="greeting">Welcome students of Canyon Ridge!</h1>
 <p id="info">Welcome To the official <br> site of school cards. <br> Made by Esther A. </p>
-<script src="sketch.js?v=coolo"></script>
+<script src="sketch.js?v=card"></script>
 
 
   
