--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1 id="greeting">Welcome students of Canyon Ridge!</h1>
 <p id="info">Welcome To the official <br> site of school cards. <br> Made by Esther A. </p>
 
-
+<p id "anime">Anime card gallery</p>
 
   
 </body>
