--- a/anime/index.html
+++ b/anime/index.html
@@ -1,1 +1,30 @@
+< DOCTYPE html>
+  <html>
+<head>
+<title>Anime cards</title>
 
+  
+</head>
+<body>
+
+
+
+  
+</body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+  </html>
