--- a/anime/index.html
+++ b/anime/index.html
@@ -2,10 +2,12 @@
   <html>
 <head>
 <title>Anime cards</title>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
+ 
   
 </head>
 <body>
+   <script src="anime.js"></script>
 
 
 
